# simd_prngs

./: Cargo.toml  README.md  benchmark.sh
benches/: bench.rs  float.rs  latency.rs  misc.rs  throughput.rs
benches/benchmarks/: mmx  native  native_sandybridge  nehalem
src/: lib.rs  macros.rs  rotate_opts.rs  simd_rng.rs  utils.rs
src/prngs/: aes_rand.rs  ars.rs  chacha.rs  intel_lcg.rs  jsf.rs  lcg.rs  lfsr.rs  mod.rs  mwc.rs  pcg.rs  pcg_fixed.rs  sfc.rs  sfc_alt.rs  vf.rs  xoroshiro.rs  xorshift.rs  xorshift128plus.rs  xoshiro.rs  xsm.rs
